@@ -46,10 +46,12 @@
 		<plugin>
 		    <groupId>org.apache.maven.plugins</groupId>
 		    <artifactId>maven-surefire-plugin</artifactId>
-		    <version>2.14</version>
-		    <configuration>
-                <argLine>-XX:-UseSplitVerifier -Djava.awt.headless=true</argLine>
-		    </configuration>
+			<version>2.22.2</version>
+		    <!-- <configuration>
+				<forkCount>3</forkCount>
+				<reuseForks>true</reuseForks>
+				<argLine>-XX:-UseSplitVerifier -Djava.awt.headless=true -Xmx1024m -XX:MaxPermSize=256m</argLine>
+		    </configuration> -->
 		</plugin>
   		<plugin>
   			<groupId>org.apache.maven.plugins</groupId>
@@ -133,9 +135,9 @@
   		<version>2.3.19</version>
   	</dependency>
   	<dependency>
-  		<groupId>log4j</groupId>
-  		<artifactId>log4j</artifactId>
-  		<version>1.2.17</version>
+  		<groupId>org.apache.logging.log4j</groupId>
+  		<artifactId>log4j-core</artifactId>
+  		<version>2.17.2</version>
   	</dependency>
   	<dependency>
   		<groupId>jgraph</groupId>
@@ -170,7 +172,7 @@
   	<dependency>
   		<groupId>mysql</groupId>
   		<artifactId>mysql-connector-java</artifactId>
-  		<version>5.1.26</version>
+  		<version>8.0.30</version>
   	</dependency>
   	<dependency>
   		<groupId>org.perf4j</groupId>
@@ -180,7 +182,7 @@
 	<dependency>
 	    <groupId>org.testng</groupId>
 	    <artifactId>testng</artifactId>
-	    <version>6.8.1</version>
+	    <version>7.7.1</version>
 	</dependency>
  </dependencies>
 
